feat: .exe file
Run mvn exec:exec@jpackage in terminal and voila, look in "target/dist" and there should be an installer there, currently only supports windows